# cli-command-explainer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_ai_chain.py
.planning/: CLEANUP_REPORT.md  README.md  RELEASE_CHECKLIST.md  RELEASE_COMPLETE.md  RELEASE_PLAN.md  RELEASE_TASKS.md  RELEASE_TEST_REPORT.md  UI_DISPLAY_EVALUATION.md  UX_IMPROVEMENTS.md  architecture.md  command_recognition_improvement.md  command_recognition_strategy.md  feasibility_assessment.md  implementation-plan.md  implementation_plan_v1.1.md  requirements.md  task-list.md  task_list_v1.1.md
config/: config.yaml
src/: __init__.py  config.py  main.py
src/capturer/: __init__.py  base.py  clipboard.py  hotkey.py
src/explainer/: __init__.py  engine.py  explainer.py  prompts.py
src/parser/: __init__.py  command.py  patterns.py
src/risk/: __init__.py  assessor.py
src/ui/: __init__.py  display.py
tests/: test_explainer.py  test_parser.py  test_risk.py
